更新shiro框架